course-work/Implementations/Bike Shop/force-app/main/default/objects/Bike__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>