course-work/Implementations/Bike Shop/force-app/main/default/objects/Bike__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>